Fixed missing spacing at bottom with many buttons

--- a/src/components/App.module.scss
+++ b/src/components/App.module.scss
@@ -3,8 +3,8 @@
 
   max-width: 1100px;
   max-height: 1000px;
-  width: 90vw;
-  height: 95%;
+  width: 100%;
+  height: 100%;
 
   display: grid;
   grid-template-rows: 1fr auto;
@@ -22,6 +22,12 @@
 
   --max-font-size: 1.8rem;
   font-size: clamp(1.5rem, 4.2vw, var(--max-font-size));
+}
+
+@media (max-width: 767px) {
+  .buttons > :last-child {
+    margin-bottom: 5vw;
+  }
 }
 
 @media (min-width: 768px) {
